<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.gentics.mesh</groupId>
	<artifactId>mesh</artifactId>
	<version>3.2.13-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>Gentics Mesh</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<projectRoot>${project.basedir}</projectRoot>
		<mesh.build.version>${project.version}</mesh.build.version>
		<mesh.build.timestamp>${maven.build.timestamp}</mesh.build.timestamp>

		<vertx.version>5.0.12</vertx.version>
		<dagger.version>2.56.2</dagger.version>
		<hibernate.version>7.1.8.Final</hibernate.version>
		<auto-factory.version>1.0-beta8</auto-factory.version>
		<compiler.plugin.version>3.11.0</compiler.plugin.version>

		<!-- Tests -->
		<surefire.version>3.0.0-M5</surefire.version>
		<surefire.forkcount>1</surefire.forkcount>
		<surefire.rerunFailingTestsCount>1</surefire.rerunFailingTestsCount>
		<surefire.jvm.postfix></surefire.jvm.postfix>
		<skip.unit.tests>false</skip.unit.tests>
		<skip.cluster.tests>false</skip.cluster.tests>
		<surefire.excludedGroups></surefire.excludedGroups>
		<surefire.groups></surefire.groups>
		<skip.vertx-hazelcast>true</skip.vertx-hazelcast>

		<!-- Jacoco -->
		<jacoco.skip.merge>true</jacoco.skip.merge>
		<jacoco.version>0.8.4</jacoco.version>
		<jacoco.skip>true</jacoco.skip>
		<jacoco.env></jacoco.env>

		<!-- Miscellaneous -->
		<mesh.image.provider>mesh-service-image-imgscalr</mesh.image.provider>

		<!-- Database tests -->
		<skip.mariadb.tests>true</skip.mariadb.tests>
		<skip.hsqlmemory.tests>true</skip.hsqlmemory.tests>
	</properties>

	<scm>
		<connection>scm:git:git@git.gentics.com:psc/mesh.git</connection>
		<developerConnection>scm:git:git@git.gentics.com:psc/mesh.git</developerConnection>
		<url>https://git.gentics.com/psc/mesh</url>
		<tag>HEAD</tag>
	</scm>

	<parent>
		<groupId>com.gentics</groupId>
		<artifactId>maven-parent</artifactId>
		<version>5.1.1</version>
	</parent>
	<organization>
		<name>Gentics Software</name>
		<url>https://www.gentics.com</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<inceptionYear>2014</inceptionYear>

	<modules>
		<module>bom</module>
		<module>changelog</module>
		<module>rest-model</module>
		<module>api</module>
		<module>plugin-api</module>
		<module>plugin-bom</module>
		<module>plugin-dep</module>
		<module>plugin-parent</module>
		<module>common-api</module>
		<module>mdm</module>
		<module>common</module>
		<module>elasticsearch</module>
		<module>rest-client</module>
		<module>services</module>
		<module>distributed</module>
		<module>distributed-coordinator</module>
		<module>core</module>
		<module>verticles</module>
		<module>doc</module>
		<module>server</module>
		<module>tests</module>
		<module>database-tests</module>
		<module>test-scanner</module>
		<module>connectors</module>
		<module>performance-tests</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler.plugin.version}</version>
					<configuration>
						<!--forceJavacCompilerUse>true</forceJavacCompilerUse -->
						<verbose>false</verbose>
						<release>17</release>
						<compilerArgs>
							<!-- See https://github.com/google/dagger/releases/tag/dagger-2.48-->
							<arg>-Adagger.ignoreProvisionKeyWildcards=DISABLED</arg>
						</compilerArgs>
						<annotationProcessorPaths>
							<path>
								<groupId>com.google.dagger</groupId>
								<artifactId>dagger-compiler</artifactId>
								<version>${dagger.version}</version>
							</path>
							<path>
								<groupId>com.google.auto.factory</groupId>
								<artifactId>auto-factory</artifactId>
								<version>${auto-factory.version}</version>
							</path>
							<path>
								<groupId>org.hibernate</groupId>
								<artifactId>hibernate-jpamodelgen</artifactId>
								<version>${hibernate.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire.version}</version>
					<configuration>
						<skip>${skip.unit.tests}</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<failOnError>false</failOnError>
								<failOnWarnings>false</failOnWarnings>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
					<executions>
						<execution>
							<id>merge-all-jacoco</id>
							<goals>
								<goal>merge</goal>
							</goals>
							<phase>install</phase>
							<configuration>
								<skip>${jacoco.skip.merge}</skip>
								<destFile>${project.build.directory}/jacoco.exec</destFile>
								<fileSets>
									<fileSet>
										<directory>${project.build.directory}</directory>
										<includes>
											<include>*.exec</include>
										</includes>
									</fileSet>
								</fileSets>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.gentics</groupId>
					<artifactId>changelog-manager-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<groupId>com.gentics</groupId>
					<artifactId>dependency-reporting-plugin</artifactId>
					<version>1.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.16.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>dependency-updates-aggregate-report</goal>
						</goals>
						<configuration>
							<formats>xml</formats>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!--plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
			</plugin-->
			<plugin>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.8.1</version>
				<configuration>
					<tag>${project.artifactId}-${project.version}</tag>
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-gpg-plugin</artifactId>
				<executions> <execution> <id>sign-artifacts</id> <phase>verify</phase> <goals>
				<goal>sign</goal> </goals> </execution> </executions> </plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<skip>true</skip>
					<skipDeploy>true</skipDeploy>
					<generateReports>false</generateReports>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<skip>${jacoco.skip}</skip>
							<propertyName>jacoco.env</propertyName>
							<destFile>${project.build.directory}/jacoco-partial.exec</destFile>
							<excludes>
								<exclude>*OrientSqlTokenManager*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>gentics.nexus.releases-oss</id>
			<name>Gentics Nexus OSS Maven Repository</name>
			<url>https://repo.gentics.com/repository/maven-releases-oss/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>gentics.nexus.snapshots</id>
			<name>Gentics Snapshots Repository</name>
			<url>https://repo.gentics.com/repository/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>gentics.nexus.releases-oss</id>
			<name>Gentics Nexus OSS Maven Repository</name>
			<url>https://repo.gentics.com/repository/maven-releases-oss/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>gentics.nexus.releases-oss</id>
			<name>Gentics Nexus OSS Maven Repository</name>
			<url>https://repo.gentics.com/repository/maven-releases-oss/</url>
		</repository>
		<snapshotRepository>
			<id>gentics.nexus.snapshots</id>
			<name>Gentics Snapshots Repository</name>
			<url>https://repo.gentics.com/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
</project>
